Mon Apr 29 17:02:44 1996  Ken Raeburn  <raeburn@cygnus.com>

	* Makefile.in (install): Install correct set of man pages, and
	check for failures.
	* kshd.M, klogind.M: Renamed from kr*.M versions.

Sun Apr 21 12:52:35 1996  Richard Basch  <basch@lehman.com>

	* krshd.c: If checksumming is required & ALWAYS_V5_KUSEROK is
	defined, incorrect messages were being displayed for V4 clients.
	Additionally, various errors were not being displayed with the
	trailing newline.
	Also, one could not specify -c in inetd.conf, because of the
	variable initialization; initialization has been corrected to
	allow either checksumming or ignoring the checksum.

Sun Apr 21 00:30:28 1996  Sam Hartman  <hartmans@mit.edu>

	* krshd.c krlogind.c: Implement -i.  Rewrite error message having
 	to do with checksums.

	* krshd.Mkrlogind.M : Document -i, remove documentation about
 	taking options from name of daemon.  Clean up checksum
 	documentation.

	* krlogind.c (do_krb_login): Fix up error messages for checksums.
  	Configuration errors are presented for situations where -c and -i
 	are used together, or where -4 and -c are used together.

Thu Apr 18 19:48:47 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in: Fix spaces by converting to tabs.

	* krlogind.c: Take patches from Doug Engert <deengert@anl.gov> to
 	allow login to work with vendor logins.  Also, fix packet-mode
 	bug; we have some hope of working on non-Solaris streams pty code.


Wed Apr 17 13:46:57 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* configure.in (LOGINLIBS): Remove DECLARE_SYS_ERRLIST since it's
		no longer necessary.

	* krcp.c (verifydir, allocbuf, rsource, source, sink): Don't use
 		sys_errlist[]; just call error_message() instead, since we
 		depend on com_err anyway.

	* krshd.c (recvauth): 
	* krlogind.c (recvauth): Don't actually check the checksum unless
 		it is required.  Old (pre-beta 5) clients sent a checksum
 		of random garbage (such as their pid) which is impossible to