@@ -4,6 +4,11 @@ Mon Apr 29 17:02:44 1996  Ken Raeburn  <raeburn@cygnus.com>
 	check for failures.
 	* kshd.M, klogind.M: Renamed from kr*.M versions.
 
+	Wed Sep 13 23:19:17 1995  Mark Eichin  <eichin@cygnus.com>
+
+	* login.M: New file. Man page for login with some description of
+	new features.
+
 Sun Apr 21 12:52:35 1996  Richard Basch  <basch@lehman.com>
 
 	* krshd.c: If checksumming is required & ALWAYS_V5_KUSEROK is
